refactor some auth code again